# zettlekasten-app

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  db.ts  global.css  main.tsx  theme.test.ts  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: graph.test.ts  (+7 more)
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  link-picker.tsx  source-picker.tsx  trash.tsx  workspace.tsx
apps/mobile/src/: db.ts  store.ts  theme.ts
docs/superpowers/plans/: 2026-04-06-zettelkasten-phase1.md  2026-04-06-zettelkasten-phase2.md  2026-04-07-editorial-dark-overhaul.md  2026-04-07-foreign-key-enforcement.md  2026-04-07-remaining-findings.md  2026-04-13-note-workspace-redesign.md  2026-04-14-inbox-expanded-capture.md  2026-04-14-review-library-style.md  2026-04-14-review-queue-and-graph-refinement.md  2026-04-14-review-workspace-readability.md  2026-04-14-wikilink-autocomplete.md  2026-04-15-icon-and-contextmenu.md  2026-04-15-mobile-native-platform-ui-plan.md  2026-04-15-pre-mobile-hardening-fixes.md  2026-04-15-pre-mobile-hardening-review.md  2026-04-15-react-native-mobile-plan.md  2026-04-21-mobile-parity-audit-and-fix-plan.md  2026-04-21-mobile-review-workspace-structural-parity-plan.md  2026-04-21-mobile-tab-bar-premium-plan.md
scripts/: migrate-obsidian.py
(+62 files in other folders)
